// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`big STEM tool render goldens (default state) > renders + pins a digest for appLab 1`] = `
{
  "buttons": 26,
  "inputs": 5,
  "lengthBucket": 68,
  "selects": 0,
  "sha": "6e2097cae4265927",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for assessmentLiteracy 1`] = `
{
  "buttons": 10,
  "inputs": 0,
  "lengthBucket": 30,
  "selects": 0,
  "sha": "cb7f0729251badab",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for beehive 1`] = `
{
  "buttons": 86,
  "inputs": 7,
  "lengthBucket": 633,
  "selects": 0,
  "sha": "416320b14a12c8d4",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for birdLab 1`] = `
{
  "buttons": 127,
  "inputs": 1,
  "lengthBucket": 732,
  "selects": 0,
  "sha": "879acb777b9f2d9c",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for cephalopodLab 1`] = `
{
  "buttons": 17,
  "inputs": 1,
  "lengthBucket": 83,
  "selects": 0,
  "sha": "9a6a33e0624ba88f",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for learningLab 1`] = `
{
  "buttons": 22,
  "inputs": 0,
  "lengthBucket": 89,
  "selects": 0,
  "sha": "d1e6bb7a36d2e7a0",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for nutritionLab 1`] = `
{
  "buttons": 19,
  "inputs": 0,
  "lengthBucket": 119,
  "selects": 0,
  "sha": "525ef2960c69a165",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for plateTectonics 1`] = `
{
  "buttons": 27,
  "inputs": 5,
  "lengthBucket": 141,
  "selects": 0,
  "sha": "f3c93325f1c36e28",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for printingPress 1`] = `
{
  "buttons": 25,
  "inputs": 0,
  "lengthBucket": 225,
  "selects": 0,
  "sha": "ed17b4b56cf068aa",
  "svgs": 2,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for raptorHunt 1`] = `
{
  "buttons": 48,
  "inputs": 1,
  "lengthBucket": 127,
  "selects": 0,
  "sha": "713398ef0b482344",
  "svgs": 1,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for roadReady 1`] = `
{
  "buttons": 64,
  "inputs": 3,
  "lengthBucket": 203,
  "selects": 0,
  "sha": "af9f72500d801db6",
  "svgs": 0,
}
`;

exports[`big STEM tool render goldens (default state) > renders + pins a digest for solarSystem 1`] = `
{
  "buttons": 24,
  "inputs": 1,
  "lengthBucket": 80,
  "selects": 0,
  "sha": "992cdbed9229e633",
  "svgs": 0,
}
`;
